# finalcmake

./: CMakeLists.txt  finalcmake.cpp  finalcmake.h  hello.cpp  note.txt
src/: CMakeLists.txt  main.cpp
src/include/: mylib.h
src/lib/: module2.cpp
src/tests/: CMakeLists.txt  test_main.cpp
